name change of view and model

--- a/AccountLedger.Web/Pages/Account/AccountTransactions.cshtml
+++ b/AccountLedger.Web/Pages/Account/AccountTransactions.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @using AccountLedger.Models
 @using System.Globalization
-@model AccountLedger.Pages.AccountTransactionModel
+@model AccountLedger.Pages.AccountTransactionsModel
 @{
     ViewData["Title"] = "Transaction";
 }
