--- a/AccountLedger.Web/Pages/Shared/_Layout.cshtml
+++ b/AccountLedger.Web/Pages/Shared/_Layout.cshtml
@@ -20,14 +20,20 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AccountTransaction">Transcations</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/">Accounts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Accounts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AccountTransaction">Transcations</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
