--- a/AccountLedger.Web/Pages/Account/Index.cshtml
+++ b/AccountLedger.Web/Pages/Account/Index.cshtml
@@ -16,9 +16,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Accounts[0].Name)
             </th>
-            <th>
+           @* <th>
                 Number of Transactions
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -28,12 +28,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            @*<td>
                     @(item.Transactions == null ? 0 : item.Transactions.Count)
-            </td>
+            </td>*@
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Transaction/Index" asp-route-id="@item.Id">Statement</a> |
+                <a asp-page="./Transaction/Create" asp-route-id="@item.Id">Debit/Credit</a> |
+                @*<a asp-page="./Details" asp-route-id="@item.Id">Details</a> |*@
                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
